new categories page

--- a/src/output.css
+++ b/src/output.css
@@ -2566,6 +2566,9 @@
   transform: scale(0);
   opacity: 0;
 }
+html {
+  scroll-behavior: smooth;
+}
 @property --tw-translate-x {
   syntax: "*";
   inherits: false;
