--- a/src/input.css
+++ b/src/input.css
@@ -125,3 +125,23 @@
 html{
     scroll-behavior: smooth;
 }
+
+.glow-card:hover {
+    box-shadow: 0 0 15px rgba(0, 132, 255, 0.8);
+    transform: scale(1.05);
+}
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 1s ease-out forwards;
+}
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
